# wizards-portfolio

./: .env.example  Cargo.toml
src/: config.rs  errors.rs  main.rs
src/db/: admin.rs  connection.rs  mod.rs  posts.rs
src/logging/: db_logger.rs  mod.rs  performance.rs  request_logger.rs
src/middlewares/: errors.rs  mod.rs  request_logging.rs
src/routes/: api.rs  logs.rs  mod.rs  pages.rs
src/routes/api/: health.rs  logging.rs  mod.rs
src/templates/: index.html
src/templates/errors/: 404-dev.html  404.html  500-dev.html  500.html
src/templates/logs/: all_requests.html  clicks.html  dashboard.html  date_details.html  requests.html
src/types/: mod.rs  post.rs  user.rs
