[package]
name = "wizards_portfolio"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.8"
actix-web = "4.11.0"
chrono = "0.4.42"
dotenv = "0.15.0"
env_logger = "0.11.8"
html-escape = "0.2.13"
lazy_static = "1.5.0"
serde_json = "1.0.145"
tera = "1.20.0"
serde = { version = "1.0", features = ["derive"] }

# Authentication
bcrypt = "0.15"
jsonwebtoken = "9"

# Logging
log = "0.4"
tokio = "1.47.1"
mongodb = "3.3.0"
futures = "0.3.31"
